manifest/objects/Apttus__Office365ReviewDetail__c.object
<CustomObject>
    <description>Stores Office 365 review information</description>
    <fields>
        <fullName>Apttus__DownloadURL__c</fullName>
        <description>URL to download the uploaded document</description>
        <inlineHelpText>URL to download the uploaded document</inlineHelpText>
        <label>Download URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Exception__c</fullName>
        <description>Stores errors from Office 365.</description>
        <inlineHelpText>Stores errors from Office 365.</inlineHelpText>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__FileLink__c</fullName>
        <description>Sharable link to the Office 365 document to send to reviewers</description>
        <inlineHelpText>Sharable link to the Office 365 document to send to reviewers</inlineHelpText>
        <label>File Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Office365StatusType__c</fullName>
        <description>Status type of the Office 365 review cycle</description>
        <inlineHelpText>Status type of the Office 365 review cycle</inlineHelpText>
        <label>Office 365 Status Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upload</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>ReviewEnd</fullName>
                </value>
                <value>
                    <fullName>ReviewCancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Office365Status__c</fullName>
        <description>Status of the Office 365 review cycle</description>
        <inlineHelpText>Status of the Office 365 review cycle</inlineHelpText>
        <label>Office 365 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ReviewCycleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Review Cycle lookup</description>
        <inlineHelpText>Review Cycle lookup</inlineHelpText>
        <label>Review Cycle</label>
        <referenceTo>Apttus__ReviewCycle__c</referenceTo>
        <relationshipLabel>Office 365 Review Details</relationshipLabel>
        <relationshipName>Office365ReviewDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__UploadFileId__c</fullName>
        <description>File Id of the uploaded document</description>
        <externalId>true</externalId>
        <inlineHelpText>File Id of the uploaded document</inlineHelpText>
        <label>Upload File Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__UploadURL__c</fullName>
        <description>Upload URL of Office 365</description>
        <inlineHelpText>Upload URL of Office 365</inlineHelpText>
        <label>Upload URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Office 365 Review Detail</label>
    <nameField>
        <label>Office365ReviewDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office 365 Review Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>